@@ -1,9 +1,9 @@
 #!/bin/sh
-
-# compileforms
+#
+# Copyright (C) 2005 Anders Logg.                                                                                                                     
+# Licensed under the GNU GPL Version 2.       
 #
 # Recompile all ffc forms (use when FFC has been updated)
-#
 # This script should be run from the top level directory.
                                                                                                     
 # Simple test to see where we are
